# spirit-linux

./: Makefile  Makefile.am  afc.c  afc.h  autogen.sh  configure.ac  spirit  spirit.c
igor/: install  map.plist
resources/: freeze.tar.xz  overrides.plist
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  main.c  spirit.c  spirit.h  spirit_linux_gtk.ui
