dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(spirit_linux_gtk, 0.1)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC






AM_PROG_LIBTOOL



PKG_CHECK_MODULES(SPIRIT_LINUX_GTK, [gtk+-2.0 >= 2.12 libimobiledevice-1.0 >= 1.0 libplist >= 1.0 openssl >= 0.9])




AC_OUTPUT([
Makefile
src/Makefile

])
